@@ -6,7 +6,7 @@ CXXFLAGS=$(CWARNINGS) $(COPTIM) $(DINCLUDE)
 
 OBJS=Checksum.o Command.o CommandInterpreter.o Component.o ComponentFactory.o \
 	EscapedString.o FileLoader.o GXemul.o StateVariable.o \
-	SymbolRegistry.o UnitTest.o debug_new.o
+	StringHelper.o SymbolRegistry.o UnitTest.o debug_new.o
 
 all: $(OBJS) do_commands do_fileloaders
 
